Fix spacing above breadcrumb.

--- a/static/src/app/scss/styles.scss
+++ b/static/src/app/scss/styles.scss
@@ -163,7 +163,7 @@ main {
   padding-top: 1rem;
   padding-bottom: 1rem;
   @include media-breakpoint-up(lg) {
-    padding-top: 3rem;
+    padding-top: 1.5rem;
     padding-bottom: 3rem;
   }
 }
